# SIRAB

./: .gitignore  README.md
FRONT/CSS/: dashboard_admin.css  dashboard_centro.css  dashboard_operador.css  dashboard_veterinario.css  index.css  login_personal.css  registro_centro.css
FRONT/HTML/: dashboard_admin.html  dashboard_centro.html  dashboard_operador.html  dashboard_veterinario.html  index.html  login_personal.html  registro_centro.html
FRONT/JS/: dashboard_admin.js  dashboard_centro.js  dashboard_operador.js  dashboard_veterinario.js  index.js  login_personal.js  registro_centro.js
SIRAB/: main.py  pyproject.toml
SIRAB/config/: conexionDB.py  constantes.py
SIRAB/routers/: animales.py  centros_rescate.py  especies.py  historial_centros.py  historial_medico.py  personal.py  reportes.py  rescates.py  roles.py  salidas.py  tipo_especie.py  usuarios.py
