[project]
name = "sirab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.133.1",
    "passlib>=1.7.4",
    "psycopg[binary,pool]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "uvicorn[standard]>=0.41.0",
]
